--- a/app/src/main/res/layout/fragment_user_feeds.xml
+++ b/app/src/main/res/layout/fragment_user_feeds.xml
@@ -54,6 +54,7 @@
                     android:weightSum="2">
 
                     <LinearLayout
+                        android:id="@+id/linearWritePost"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
