--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -40,7 +40,7 @@
                         android:id="@+id/tvUserName"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="NAME"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="@dimen/font_15" />
 
@@ -109,7 +109,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
-                                    android:text="+91 8888888888"
+                                    android:text=""
                                     android:textColor="#2a7bb2"
                                     android:textSize="@dimen/font_12" />
                             </LinearLayout>
@@ -130,7 +130,8 @@
                                     android:id="@+id/tvUserEmailAddress"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="android@squareimali.com"
+                                    android:layout_gravity="center_vertical"
+                                    android:text=""
                                     android:textColor="#474747"
                                     android:textSize="@dimen/font_12" />
                             </LinearLayout>
@@ -159,7 +160,7 @@
                                 android:id="@+id/tvUserAddress"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Obs Building, Noida" />
+                                android:text="" />
                         </LinearLayout>
 
                     </LinearLayout>
