--- a/app/src/main/res/layout/activity_user_pass.xml
+++ b/app/src/main/res/layout/activity_user_pass.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_screen"
+    android:background="@drawable/screen_background"
     tools:context="in.squarei.socialconnect.activities.useraccesspackage.UserPassActivity">
 
     <!-- layout to pass user using pin -->
