--- a/app/src/main/res/layout/fragment_fragment_two_app_intro.xml
+++ b/app/src/main/res/layout/fragment_fragment_two_app_intro.xml
@@ -2,12 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/screen_background"
     tools:context="in.squarei.socialconnect.fragments.appIntro.FragmentTwoAppIntro">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
