--- a/app/src/main/res/layout/nav_header_social_connect_base.xml
+++ b/app/src/main/res/layout/nav_header_social_connect_base.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/user" />
 
     <TextView
+        android:id="@+id/tvNavUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/detailExpertPic"
