--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -46,7 +46,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/man" />
+                android:src="@drawable/user" />
 
             <TextView
                 android:id="@+id/tvUserProfileName"
@@ -55,7 +55,6 @@
                 android:layout_below="@+id/profile_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_10"
-                android:text="MOHIT KUMAR"
                 android:textColor="@color/green"
                 android:textSize="@dimen/font_14"
                 android:textStyle="bold" />
@@ -66,7 +65,6 @@
                 android:layout_below="@+id/tvUserProfileName"
                 android:layout_centerHorizontal="true"
                 android:paddingBottom="@dimen/margin_5"
-                android:text="fghfy hfyh h"
                 android:textColor="@color/text_color_grey"
                 android:textSize="@dimen/font_12" />
 
