--- a/app/src/main/res/layout/nav_header_social_connect_base.xml
+++ b/app/src/main/res/layout/nav_header_social_connect_base.xml
@@ -17,7 +17,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         app:srcCompat="@drawable/user" />
 
     <TextView
@@ -26,9 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/detailExpertPic"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:text="Welcome"
-        android:textColor="#fff"
-        android:textSize="16sp" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/font_14" />
 
 </RelativeLayout>
