--- a/app/src/main/res/layout/activity_upload_post.xml
+++ b/app/src/main/res/layout/activity_upload_post.xml
@@ -37,7 +37,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/margin_10"
                     android:layout_toRightOf="@+id/ivUsereProfile"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="invisible">
 
                     <TextView
                         android:id="@+id/text_name"
@@ -65,76 +66,136 @@
             app:cardElevation="4dp"
             app:cardUseCompatPadding="true">
 
-            <EditText
-                android:id="@+id/editPost"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:gravity="top"
-                android:hint="Write Something....."
-                android:lines="5"
-                android:padding="@dimen/margin_10"
-                android:textSize="@dimen/font_14" />
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/editPostTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:gravity="top"
+                    android:hint="Title"
+                    android:lines="1"
+                    android:padding="@dimen/margin_10"
+                    android:textSize="@dimen/font_14" />
+
+                <include layout="@layout/line_1_dp" />
+
+                <EditText
+                    android:id="@+id/editPost"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:background="@android:color/white"
+                    android:gravity="top"
+                    android:hint="Write Something....."
+                    android:lines="5"
+                    android:padding="@dimen/margin_10"
+                    android:textSize="@dimen/font_14" />
+            </LinearLayout>
+
+
         </android.support.v7.widget.CardView>
 
-        <LinearLayout
-            android:id="@+id/linearUploadImage"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_10"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/margin_10">
+            app:cardCornerRadius="2dp"
+            app:cardElevation="4dp"
+            app:cardUseCompatPadding="true">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/images_symbol" />
-
-            <TextView
-                android:id="@+id/text_photo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:gravity="center"
-                android:padding="@dimen/margin_5"
-                android:text="Photo"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/text_size_15" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-        <include layout="@layout/line_1_dp" />
+                <LinearLayout
+                    android:id="@+id/linearUploadImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_10"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_10">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_10"
-            android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/images_symbol" />
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/video_camera_symbol" />
+                    <TextView
+                        android:id="@+id/text_photo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:gravity="center"
+                        android:padding="@dimen/margin_5"
+                        android:text="Photo"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_15" />
+                </LinearLayout>
 
-            <TextView
-                android:id="@+id/text_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:gravity="center"
-                android:padding="@dimen/margin_5"
-                android:text="Video"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/text_size_15" />
-        </LinearLayout>
+                <include layout="@layout/line_1_dp" />
 
-        <include layout="@layout/line_1_dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_10"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/video_camera_symbol" />
+
+                    <TextView
+                        android:id="@+id/text_video"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:gravity="center"
+                        android:padding="@dimen/margin_5"
+                        android:text="Video"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_15" />
+                </LinearLayout>
+
+                <include layout="@layout/line_1_dp" />
+
+                <TextView
+                    android:id="@+id/tvPost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_20"
+                    android:background="#2a7bb2"
+                    android:paddingBottom="@dimen/margin_5"
+                    android:paddingLeft="@dimen/margin_20"
+                    android:paddingRight="@dimen/margin_20"
+                    android:paddingTop="@dimen/margin_5"
+                    android:text="POST"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_16"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:id="@+id/ivImageToBeUpload"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/margin_10"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="30dp"
@@ -147,24 +208,7 @@
 
         <include layout="@layout/line_1_dp" />
 
-        <TextView
-            android:id="@+id/tvPost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/margin_20"
-            android:background="#2a7bb2"
-            android:paddingBottom="@dimen/margin_5"
-            android:paddingLeft="@dimen/margin_20"
-            android:paddingRight="@dimen/margin_20"
-            android:paddingTop="@dimen/margin_5"
-            android:text="POST"
-            android:textColor="@color/white"
-            android:textSize="@dimen/font_16"
-            android:textStyle="bold"/>
     </LinearLayout>
-
-
 
 
 </ScrollView>
