--- a/app/src/main/res/layout/top_view_users_post.xml
+++ b/app/src/main/res/layout/top_view_users_post.xml
@@ -26,7 +26,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:maxLines="1"
-                android:text="Posted by:"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="@dimen/font_15" />
 
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvPostedBy"
                 android:maxLines="1"
-                android:text="This is the testing test......"
+                android:text=""
                 android:textColor="@color/text_color_grey"
                 android:textSize="@dimen/font_12" />
 
@@ -54,7 +54,7 @@
         <ImageView
             android:id="@+id/ivPostImage"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="170dp"
             android:scaleType="fitXY" />
 
         <LinearLayout
