--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,5 @@
     <dimen name="dp5">5dp</dimen>
     <dimen name="logo_height">120dp</dimen>
     <dimen name="logo_width">100dp</dimen>
+    <dimen name="margin_3">3dp</dimen>
 </resources>
